# btcInvestment

./: CMakeLists.txt  btc_project.vpp
backtest/: CMakeLists.txt  backtest.cpp
backtest/include/: backtest.h
charts/: chart.py
config/: CMakeLists.txt  argument.cpp
config/include/: argument.h
core/: CMakeLists.txt  contract.cpp  controller.cpp  dataHandler.cpp  holding.cpp  kline.cpp  pledge.cpp  portfolio.cpp  simulation.cpp  strategy.cpp  strategyBuilder.cpp  trade.cpp
core/include/: contract.h  controller.h  dataHandler.h  exception.h  holding.h  investment.h  kline.h  method.h  pledge.h  portfolio.h  simulation.h  strategy.h  strategyBuilder.h  trade.h
event/: CMakeLists.txt
mining/: CMakeLists.txt  miner.cpp  miningFarm.cpp  miningManagement.cpp
mining/include/: miner.h  miningFarm.h  miningManagement.h
pledge/: CMakeLists.txt  pledge.cpp
pledge/include/: pledge.h
program/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  csv.cpp
utils/include/: csv.h
