CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(BTC_Pledge)
SET(PROJECT_VERSION 1.0)

SET(CMAKE_CXX_STANDARD 11)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/program/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/pledge/include")

ADD_SUBDIRECTORY(program)
ADD_SUBDIRECTORY(pledge)

TARGET_COMPILE_OPTIONS(main PUBLIC -g -O0)


#LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/thirdParty/boost_1_70_0/stage/lib/")

#AUX_SOURCE_DIRECTORY(. DIR_SRCS)

